# demo_crew

./: .gitignore
backend/: .env.template  README.md  processed_data.json  pyproject.toml  report.md  requirements.txt  run_api.py  simplified_dataset.json  simplify_results.py
backend/config/: agents.yaml  tasks.yaml
backend/data/: system_logs.txt
backend/demo_crew/: crew.py  document_graph.py  langsmith_integration.py  main.py  master_agent.py  processed_data.json  visualize.py
backend/demo_crew/api/: main.py
backend/demo_crew/api/routes/: upload.py
backend/demo_crew/config/: agents.yaml  tasks.yaml
backend/demo_crew/data/documents/: sample_document.txt
backend/demo_crew/tools/: __init__.py  audio_tools.py  custom_tool.py  image_tools.py  text_tools.py  tool_factory.py  video_tools.py
backend/uploads/processed/: 10b69b3a-ca57-4121-b04f-9564b9d1eed8_result.json  1e81edc9-7c88-404d-8a6c-631d1295435d_result.json  202ba2c8-bda0-4296-9370-d6b0081b0911_result.json  28dccd14-9ace-45a3-81a0-029386b1a6bf_result.json  2caf4517-9d54-4194-bfcf-a0e44cd8955c_result.json  82054d18-bd04-444a-831f-07eb3d3acf09_result.json  ac05f0ce-c96a-4b80-986d-5261588da67a_result.json  ad084800-e2eb-4ac8-b764-29efc72d611c_result.json  bbfacba6-1228-44e3-8d3c-f3a6694295c9_result.json  c72b87e7-77f9-4d44-aa3d-cf975dd6c719_result.json  d53cc998-b8e5-4dee-b0e3-6a7a01f97c2d_result.json  f1cad5a1-af44-40a0-b89e-574af39d2add_result.json
frontend/: .env.local  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.next/: app-build-manifest.json  trace
frontend/.next/server/: _error.js  app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
frontend/app/: globals.css  layout.tsx  main-layout.tsx  page.tsx
frontend/app/about/: page.tsx
(+89 files in other folders)
