[project]
name = "demo_crew"
version = "0.1.0"
description = "demo_crew using LangGraph and LangChain"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13.2"
dependencies = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langgraph>=0.1.0",
    "langchain-openai>=0.0.2",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.7.4",  # Added faiss-cpu dependency
    # Minimal dependencies required for basic functionality
]

[project.optional-dependencies]
tools = [
    "opencv-python>=4.8.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "paddleocr>=2.6.0",
    "paddlepaddle>=2.5.0",
    "openai-whisper>=20240930",  # Changed from faster-whisper to openai-whisper
    "faiss-cpu>=1.7.4",  # Added here as well for good measure
]

[project.scripts]
demo_crew = "demo_crew.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
